# multi-agent-pr-reviewer

./: .dockerignore  ARCHITECTURE_CONTEXT_DUMP.md  README.md  dockerfile  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.streamlit/: config.toml
app/: main.py
app/agents/: architecture_agent.py  quality_agent.py  security_agent.py
app/api/: routes.py
app/github/: client.py
app/graph/: state.py  workflow.py
app/schemas/: review.py
app/services/: llm_service.py  review_service.py
app/utils/: dedup.py  logger.py
docs/: system_design_and_learning_guide.md
tests/: test_agents.py  test_dedup.py  test_github_client.py  test_workflow.py
ui/: api.py  components.py  styles.py
